--- a/style/main.css
+++ b/style/main.css
@@ -1,8 +1,69 @@
-* {
-  padding: 0;
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
   margin: 0;
 }
-.main-container {
-  background: #2b2b2b;
-  color: #e7e6e6;
+.checker-container {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 100px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+label {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+#number-input {
+  font-size: 1.1rem;
+  margin: 10px;
+  padding: 13px 10px;
+  border-radius: 12px;
+}
+#check-button,
+#paste {
+  background: rgb(41, 152, 160);
+  padding: 10px 20px;
+  font-size: 17px;
+  color: #ffffff;
+  border-radius: 8px;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+#check-button:hover,
+#paste:hover {
+  background: #ffffff;
+  color: #2b2b2b;
+}
+#result {
+  padding: 30px 0;
+}
+
+/* loader */
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  margin: auto;
+  display: none;
+  margin-top: 10px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@media (max-width: 600px) {
+  #paste {
+    display: none;
+  }
 }
